# robotics

./: README.md
module1/ex01/: commands.txt
module2/ex03/buklinfur/: CMakeLists.txt  package.xml
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex08/: rqt_console.csv  three_turtles.launch
module2/ex09/ex09_interfaces/: CMakeLists.txt  package.xml
module2/ex10/ex10_text_to_cmd_vel/: package.xml  setup.cfg  setup.py
module3/ex01/service_full_name/: package.xml  setup.cfg  setup.py
module3/ex01/service_interfaces/: CMakeLists.txt  package.xml
module3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
module3/ex02/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
module3/ex03/: doctor.txt  doctor_full.txt
module3/ex04/move_to_goal/: package.xml  setup.py
module3/ex05/action_cleaning_robot/: package.xml  setup.py
module3/ex05/action_cleaning_robot_interfaces/: CMakeLists.txt  package.xml
module4/ex01/: last_transorm.txt  transform.txt
module4/ex02a/: package.xml  setup.cfg  setup.py
module4/ex02a/ex02a/: carrot_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
module4/ex02a/launch/: turtle_tf2_demo.launch.py
module4/ex02a/rviz/: carrot.rviz
module4/ex02b/turtle_multi_target/: CMakeLists.txt  package.xml
module4/ex02b/turtle_multi_target/launch/: multi_target_demo.launch.py
module4/ex02b/turtle_multi_target/msg/: CurrentTarget.msg
module4/ex02b/turtle_multi_target/turtle_multi_target_py/: target_switcher.py  turtle_controller.py  turtle_tf_broadcaster.py
module5/ex01/: CMakeLists.txt  package.xml
module5/ex01/urdf/: robot.urdf
module5/ex02/: CMakeLists.txt  package.xml
module5/ex03/: CMakeLists.txt  package.xml
module5/ex04/ex04_hare_bot/: CMakeLists.txt  package.xml
module5/ex04/ex04_hare_bot/config/: bridge.yaml  ex04.rviz
module5/ex04/ex04_hare_bot/launch/: circle_movement.launch.py
module5/ex04/ex04_hare_bot/models/robot_hare_wheel_bot/: model.config  model.sdf
module5/ex04/ex04_hare_bot/src/: circle_movement.cpp
module5/ex04/ex04_hare_bot/urdf/: robot_hare_wheel_bot.urdf  robot_hare_wheel_bot.urdf.xacro
module5/ex04/ex04_hare_bot/worlds/: ex04_world.sdf
module5/ex05/: README.md
module5/ex05/ex05_hare_bot/: CMakeLists.txt  package.xml
module5/ex05/ex05_hare_bot/launch/: figure_eight.launch.py
module5/ex05/ex05_hare_bot/src/: figure_eight.cpp
module6/ex01/: lidar.launch.py
module6/ex02/: depth.launch.py
(+30 files in other folders)
